--- a/src/app/timesheet/timesheet.component.css
+++ b/src/app/timesheet/timesheet.component.css
@@ -1,30 +1,34 @@
-div.timesheet{
+div.timesheet, div.dateView{
     width: 100%;   height: 100%;
     position: relative;
     display: flex;  flex-direction: column;     justify-content: flex-start;
+    align-items: center;
+    background-color: rgb(245, 245, 245);
     /* background-color: #455672; */
 }
 
-div.dateSlider{
-    width: 80%;   height: 100px;
-    display: flex;  flex-direction: row;    justify-content: space-between;
+div.dateNavigation{
+    width: 80%;   height: 100px;    
+    display: flex;  flex-direction: row;
     margin-bottom: 20px;
+    position: relative;
 }
-
-span.navigateDate{
-    width: 25px;
-    background-image: url('./../../assets/icons8-chevron-right-48.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 35px;
-    cursor: pointer;
-}
-span.navigateDate.previousDate{
-    transform: rotateZ(180deg);
+div.dateSlider{
+    position: relative;
+    width: 100%;   height: 100px;    
+    display: flex;  flex-direction: row;
+    margin-bottom: 20px;    overflow-x: hidden;
+    border-radius: 10px;
 }
 span.date{
+    min-width: 100%;
     line-height: 50px;  text-align: center;
     background-color: #455672;
-    width: 20%; border: 1px solid rgba(150,150,150,0.8);
-    color: whitesmoke;  font-size: 20px;    cursor: pointer;    opacity: 0.7;
+    border: 1px solid rgba(150,150,150,0.8);
+    color: whitesmoke;  font-size: 20px;
+    font-weight: 300;
+    /* cursor: pointer; */
+    /* opacity: 0.7; */
 }
 span.date:hover{
     opacity: 1;
@@ -32,14 +36,47 @@ span.date:hover{
 span.date.selected{
     opacity: 1;
 }
+span.totalHours{
+    position: absolute;
+    right: 0px; color: whitesmoke;  line-height: 100px; font-size: 50px;    font-weight: 200;
+    width: 100px;    height: 100%;   vertical-align: middle;     text-align: center;
+}
+span.totalHoursLabel{
+    position: absolute;
+    right: 0px;     bottom: 5px;    color: whitesmoke;
+    /* font-size: 20px;    font-weight: 200; */
+    width: 100px;    height: 20px;   vertical-align: middle;     text-align: center;
+}
+span.navigateDate{
+    width: 25px;
+    background-image: url('./../../assets/icons8-chevron-right-48.png');
+    background-position: center;    background-repeat: no-repeat;   background-size: 35px;
+    cursor: pointer;    opacity: 0.7;
+}
+span.navigateDate:hover{
+    opacity: 1;
+}
+span.navigateDate.previousDate{
+    transform: rotateZ(180deg);
+}
 div.tasks{
     width: 80%;
     display: flex;  flex-direction: column;    justify-content: space-evenly;
 }
-div.taskLabels, div.taskDetails{
+div.taskLabels{
     width: 100%;
     display: flex;  flex-direction: row;    justify-content: space-evenly;
     margin-bottom: 10px;
+}
+div.taskDetails{
+    width: 100%;
+    display: flex;  flex-direction: column;    justify-content: space-evenly;   align-items: center;
+}
+div.task{
+    width: 100%;
+    display: flex;  flex-direction: row;    justify-content: space-evenly;   align-content: center;  align-items: center;
+    padding-bottom: 10px;    padding-top: 10px;
+    margin-bottom: 5px;    margin-top: 5px;
 }
 span.taskLabel, input.taskDetail, select.taskDetail{
     width: 30%; height: 30px;
@@ -47,6 +84,9 @@ span.taskLabel, input.taskDetail, select.taskDetail{
 }
 span.taskLabel{
     text-align: center;
+}
+input.taskDetail.taskName, select.taskDetail.projectName, input.taskDetail.timeSpent{
+    background: transparent;    box-shadow: none;    border: none;   border-bottom: 1px solid black;
 }
 span.taskLabel.projectName, select.taskDetail.projectName{
     width: 20%;
@@ -61,7 +101,7 @@ span.newTaskIcon{
     width: 75px;    height: 75px;
     background-image: url('./../../assets/icons8-plus-100-1.png');
     background-position: center;    background-repeat: no-repeat;   background-size: 75px;
-    cursor: pointer;    margin: auto;  opacity: 0.7;
+    cursor: pointer;    margin: auto;  opacity: 0.4;
 }
 span.newTaskIcon:hover{
     opacity: 1;
@@ -78,10 +118,96 @@ div.buttons{
     display: flex;  flex-direction: row;    justify-content: center;
 }
 span.button{
-    width: 100px;   height: 50px;
-    text-align: center;     line-height: 50px;   font-size: 20px;
-    border: 1px solid #455672;    margin: 10px;   cursor: pointer;
+    width: 80px;   height: 40px;    color: rgba(236, 184, 13, 1);
+    text-align: center;     line-height: 40px;   font-size: 15px;
+    border: 1px solid rgba(32,32,32,0.6);    margin: 10px;   cursor: pointer;
+    border-radius: 25px;
 }
 span.button:hover{
-    background-color: #455672;  color: whitesmoke;
+    background-color: rgba(236, 184, 13, 1);  
+    color: rgba(32,32,32,1);
+}
+/*--------------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------------*/
+/*--------------------------------------------------------------------------------------------------*/
+div.timesheet, div.calendarView{
+    width: 100%;   height: 100%;
+    position: relative;
+    display: flex;  flex-direction: column;     justify-content: flex-start;
+    align-items: center;
+    /* background-color: #dddddd; */
+    background-color: rgb(245, 245, 245);
+    /* background-color: #455672; */
+}
+
+div.monthNavigation{
+    width: 80%;   height: 100px;    
+    display: flex;  flex-direction: row;
+    margin-bottom: 20px;
+    position: relative;
+}
+div.monthSlider{
+    position: relative;
+    width: 100%;   height: 100px;    
+    display: flex;  flex-direction: row;
+    margin-bottom: 20px;    overflow-x: hidden;
+    border-radius: 10px;    line-height: 100px;
+}
+span.month{
+    min-width: 100%;
+    line-height: 50px;  text-align: center;
+    background-color: #455672;
+    border: 1px solid rgba(150,150,150,0.8);
+    color: whitesmoke;  font-size: 20px;
+    font-weight: 300;    line-height: 100px;
+    /* cursor: pointer; */
+    /* opacity: 0.7; */
+}
+span.month:hover{
+    opacity: 1;
+}
+span.month.selected{
+    opacity: 1;
+}
+span.navigateMonth{
+    width: 25px;
+    background-image: url('./../../assets/icons8-chevron-right-48.png');
+    background-position: center;    background-repeat: no-repeat;   background-size: 35px;
+    cursor: pointer;    opacity: 0.7;
+}
+span.navigateMonth:hover{
+    opacity: 1;
+}
+span.navigateMonth.previousMonth{
+    transform: rotateZ(180deg);
+}
+div.calendarDates{
+    display: flex;  flex-direction: row;    flex-wrap: wrap;
+    width: calc(80% - 50px); height: 500px;
+}
+div.calendarDateCard{
+    width: 13%;   height: 90px;  border: 0.5px solid rgb(69, 86, 114, 0.3);
+    background-color: rgba(245,245,245,1);   
+    border-radius: 5px;
+    display: flex;  flex-direction: column;
+    padding: 5px;   cursor: pointer;
+}
+div.calendarDateCard:hover{
+    background-color: #455672;
+}
+span.calendarHoursLabel{
+    font-size: 30px;    font-weight: 300;
+}
+span.calendarHoursLabel span{
+    font-size: 15px;
+}
+div.calendarDateCard span{
+    color: rgba(100,100,100,1);
+}
+div.calendarDateCard:hover span{
+    color: rgba(200,200,200,1);
 }
