--- a/src/app/timesheet/timesheet.component.css
+++ b/src/app/timesheet/timesheet.component.css
@@ -3,14 +3,14 @@ div.timesheet, div.dateView{
     position: relative;
     display: flex;  flex-direction: column;     justify-content: flex-start;
     align-items: center;
-    background-color: rgb(245, 245, 245);
+    /* background-color: rgb(245, 245, 245); */
     /* background-color: #455672; */
 }
 
 div.dateNavigation{
     width: 80%;   height: 100px;    
     display: flex;  flex-direction: row;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     position: relative;
 }
 div.dateSlider{
@@ -24,6 +24,7 @@ span.date{
     min-width: 100%;
     line-height: 50px;  text-align: center;
     background-color: #455672;
+    background-color: rgba(50,50,50,1); opacity: 0.9;
     border: 1px solid rgba(150,150,150,0.8);
     color: whitesmoke;  font-size: 20px;
     font-weight: 300;
@@ -64,9 +65,10 @@ div.tasks{
     display: flex;  flex-direction: column;    justify-content: space-evenly;
 }
 div.taskLabels{
-    width: 100%;
-    display: flex;  flex-direction: row;    justify-content: space-evenly;
-    margin-bottom: 10px;
+    width: calc(100% - 50px);    background-color: #f7eb47;  margin-left: 25px;
+    display: flex;  flex-direction: row;    justify-content: space-between;
+    vertical-align: middle; line-height: 30px;
+    margin-bottom: 20px;
 }
 div.taskDetails{
     width: 100%;
@@ -78,18 +80,23 @@ div.task{
     padding-bottom: 10px;    padding-top: 10px;
     margin-bottom: 5px;    margin-top: 5px;
 }
-span.taskLabel, input.taskDetail, select.taskDetail{
-    width: 30%; height: 30px;
-    outline: none;
+span.taskLabel, input.taskDetail, select.taskDetail, div.taskDetail{
+    width: 30%; height: 30px;   color: black;  opacity: 0.6;
+    outline: none;  font-weight: 400;   font-size: 15px;
+}
+div.taskDetail{
+    width: 100px;   padding: 0px !important;    border: none;
 }
 span.taskLabel{
     text-align: center;
 }
-input.taskDetail.taskName, select.taskDetail.projectName, input.taskDetail.timeSpent{
-    background: transparent;    box-shadow: none;    border: none;   border-bottom: 1px solid black;
+input.taskDetail.taskName, select.taskDetail.projectName, input.taskDetail.timeSpentVal, div.taskDetail.timeSpent {
+    background: transparent;    box-shadow: none;    border: none;   border: 1px solid rgb(148, 134, 134); 
+    /* border-radius: 5px; */
+    padding-left: 10px;
 }
 span.taskLabel.projectName, select.taskDetail.projectName{
-    width: 20%;
+    width: 20%; cursor: pointer;
 }
 span.taskLabel.taskName, input.taskDetail.taskName{
     width: 60%;
@@ -97,13 +104,36 @@ span.taskLabel.taskName, input.taskDetail.taskName{
 span.taskLabel.timeSpent, input.taskDetail.timeSpent{
     width: 10%;
 }
-span.newTaskIcon{
-    width: 75px;    height: 75px;
-    background-image: url('./../../assets/icons8-plus-100-1.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 75px;
-    cursor: pointer;    margin: auto;  opacity: 0.4;
+div.taskDetail.timeSpent{
+    display: flex;  flex-direction: row;    justify-content: center;
+    padding-left: 5px;  padding-right: 5px;
 }
-span.newTaskIcon:hover{
+span.minus{
+    width: 30px;    height: 30px;
+    padding-left: 10px;  padding-right: 10px;
+    border-right: 2px solid rgb(148, 134, 134); 
+    background-image: url('./../../assets/icons8-minus-24.png');
+    background-position: center;    background-repeat: no-repeat;   background-size: 15px;
+    cursor: pointer;    margin: auto;  opacity: 0.4;    margin-bottom: 50px;
+}
+input.timeSpentValue{
+    width: 100%;    border: none;   outline: none;  text-align: center; font-size: 20px;
+}
+span.plus{
+    width: 30px;    height: 30px;
+    padding-left: 10px;  padding-right: 10px;
+    border-left: 2px solid rgb(148, 134, 134);
+    background-image: url('./../../assets/icons8-plus-24.png');
+    background-position: center;    background-repeat: no-repeat;   background-size: 15px;
+    cursor: pointer;    margin: auto;  opacity: 0.4;    margin-bottom: 50px;
+}
+span.newTaskIcon{
+    width: 30px;    height: 30px;
+    background-image: url('./../../assets/icons8-plus-100-1.png');
+    background-position: center;    background-repeat: no-repeat;   background-size: 30px;
+    cursor: pointer;    margin: auto;  opacity: 0.4;    margin-bottom: 50px;
+}
+span.newTaskIcon:hover, span.incIcon:hover{
     opacity: 1;
 }
 
@@ -118,13 +148,13 @@ div.buttons{
     display: flex;  flex-direction: row;    justify-content: center;
 }
 span.button{
-    width: 80px;   height: 40px;    color: rgba(236, 184, 13, 1);
-    text-align: center;     line-height: 40px;   font-size: 15px;
+    width: 80px;   height: 40px;    color: rgba(236, 184, 13, 1);   color: #f7eb47; color: rgba(32,32,32,1);
+    text-align: center;     line-height: 40px;   font-size: 15px;   font-weight: 300;
     border: 1px solid rgba(32,32,32,0.6);    margin: 10px;   cursor: pointer;
-    border-radius: 25px;
+    border-radius: 5px;
 }
 span.button:hover{
-    background-color: rgba(236, 184, 13, 1);  
+    background-color: rgba(236, 184, 13, 1);  background-color: #f7eb47;
     color: rgba(32,32,32,1);
 }
 /*--------------------------------------------------------------------------------------------------*/
@@ -140,7 +170,7 @@ div.timesheet, div.calendarView{
     display: flex;  flex-direction: column;     justify-content: flex-start;
     align-items: center;
     /* background-color: #dddddd; */
-    background-color: rgb(245, 245, 245);
+    /* background-color: rgb(245, 245, 245); */
     /* background-color: #455672; */
 }
 
@@ -160,7 +190,7 @@ div.monthSlider{
 span.month{
     min-width: 100%;
     line-height: 50px;  text-align: center;
-    background-color: #455672;
+    background-color: rgba(50,50,50,1); opacity: 0.9;
     border: 1px solid rgba(150,150,150,0.8);
     color: whitesmoke;  font-size: 20px;
     font-weight: 300;    line-height: 100px;
@@ -196,11 +226,13 @@ div.calendarDateCard{
     display: flex;  flex-direction: column;
     padding: 5px;   cursor: pointer;
 }
-div.calendarDateCard:hover{
+div.calendarDateCard:hover, div.calendarDateCard.today{
     background-color: #455672;
+    background-color: rgba(50,50,50,1); opacity: 0.9;
 }
 span.calendarHoursLabel{
-    font-size: 30px;    font-weight: 300;
+    font-size: 35px;    font-weight: 300;
+    right: 0px;
 }
 span.calendarHoursLabel span{
     font-size: 15px;
@@ -208,6 +240,13 @@ span.calendarHoursLabel span{
 div.calendarDateCard span{
     color: rgba(100,100,100,1);
 }
-div.calendarDateCard:hover span{
+div.calendarDateCard:hover span, div.calendarDateCard.today span{
     color: rgba(200,200,200,1);
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin: 0; 
 }
