added reports component

--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -7,7 +7,7 @@
     <span class='menuItemIcon timesheetIcon'></span>
     <!-- <span class='menuItemLabel'>Edit</span> -->
   </div>
-  <div class='menuItem'>
+  <div class='menuItem' routerLink='/home/reports' routerLinkActive='active' [routerLinkActiveOptions]="{ exact: true }">
     <span class='menuItemIcon reportsIcon'></span>
     <!-- <span class='menuItemLabel'>Report</span> -->
   </div>
