--- a/src/app/timesheet/timesheet.component.html
+++ b/src/app/timesheet/timesheet.component.html
@@ -25,6 +25,8 @@
           <select class='taskDetail projectName' [(ngModel)]='task.project_name' (change)='updateTask(task)'>
               <option value="UHC">UHC</option>
               <option value="NPS">NPS</option>
+              <option value="Denials">Denials</option>
+              <option value="HC Collection">HC Collections</option>
           </select>
           <input type=text class='taskDetail taskName' [(ngModel)]='task.task_name'/>
           <!-- <input type=number class='taskDetail timeSpent' [(ngModel)]='task.time_spent'/> -->
@@ -58,7 +60,7 @@
       <div class='calendarDateCard' *ngFor='let date of emptyCalendarDates'></div>
       <div class='calendarDateCard' [class.today]='date==today' *ngFor='let date of currentCalendarDates' (click)='dateDrillDown(date)'>
         <!-- <span class='calendarDate'>{{ date | date: 'MMM d, yyyy' }}</span> -->
-        <span class='calendarDate'>{{ date | date: 'EEE' }}, {{ date | date: 'dd' }}</span>
+        <span class='calendarDate'>{{ date | date: 'EEE' }}, {{ date | date: 'dd' | uppercase }}</span>
         <br>
         <!-- <span class='calendarWeekday'>{{ date | date: 'EEEE' }}</span> -->
         <span class='calendarHoursLabel'>{{ getTotalHoursSpent(allTasks, date) }}<span> h</span></span>
