--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,31 +1,32 @@
 *{
     transition: all 0.2s;
 }
-div.projects{
+div.employees{
     width: 100%;   height: 100%;
     position: relative;
     display: flex;  flex-direction: column;     justify-content: flex-start;
     align-items: center;
     /* background-color: rgb(0, 245, 245); */
 }
-div.project{
+div.employee{
     width: 50%;    height: 50px;
     background-color: RGBA(200,200,200,1);
     background-color: #f7eb47;
+    display: flex;  flex-direction: row;
 }
-div.project:hover{
+div.employee:hover{
     width: 50%;    height: 50px;
     background-color: RGBA(40,140,200,1);
     background-color: RGBA(32,32,32,1);
 }
-span.newProjectIcon{
+span.newEmployeeIcon{
     width: 30px;    height: 30px;
     background-image: url('./../../assets/icons8-plus-100-1.png');
     background-position: center;    background-repeat: no-repeat;   background-size: 30px;
     cursor: pointer;    margin-top: 25px; margin-bottom: 25px;  opacity: 0.7;  
       /* margin-bottom: 50px; */
 }
-span.newProjectIcon:hover, span.incIcon:hover{
+span.newEmployeeIcon:hover, span.incIcon:hover{
     opacity: 1;
 }
 div.buttons{
@@ -42,12 +43,21 @@ span.button:hover{
     background-color: rgba(236, 184, 13, 1);  background-color: #f7eb47;
     color: rgba(32,32,32,1);
 }
-input.projectName {
-    width: 100%; height: 50px;
+input.employeeAttribute {
+    min-width: 50px; height: 50px;
+    width: fit-content;
     background: transparent;    box-shadow: none;    border: none;  
     padding-left: 10px; outline: none;
     color: black;
 }
-input.projectName:hover{
+input.employeeAttribute.employeeEmail {
+    width: 300px;
+}
+div.employee:hover > input.employeeAttribute{
     color: honeydew;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
 }
