--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -4,19 +4,33 @@
 div.projects{
     width: 100%;   height: 100%;
     position: relative;
-    display: flex;  flex-direction: column;     justify-content: flex-start;
+    display: flex;  flex-direction: column;     justify-content: flex-start; align-content: center;
     align-items: center;
     /* background-color: rgb(0, 245, 245); */
 }
+div.projectsLabel{
+    width: 50%;    height: 75px;
+    display: flex; flex-direction: column;
+    text-align: center; vertical-align: middle; align-self: center; align-content: center;
+    background-color: rgba(6, 50, 116,1);
+}
+span.projectsLabel{
+    color: honeydew;
+    margin: auto;
+    border: 0.5px solid RGBA(6, 50, 116,1);
+    text-align: center; vertical-align: middle; align-self: center; align-content: center;
+    font-size: x-large;
+}
 div.project{
     width: 50%;    height: 50px;
-    background-color: RGBA(200,200,200,1);
-    background-color: #f7eb47;
+    /* background-color: RGBA(200,200,200,1); */
+    /* background-color: #f7eb47; */
+    border-bottom: 1px solid RGBA(200,200,200,1);
 }
 div.project:hover{
     width: 50%;    height: 50px;
-    background-color: RGBA(40,140,200,1);
-    background-color: RGBA(32,32,32,1);
+    /* background-color: RGBA(40,140,200,1); */
+    /* background-color: RGBA(32,32,32,1); */
 }
 span.newProjectIcon{
     width: 30px;    height: 30px;
@@ -39,8 +53,8 @@ span.button{
     border-radius: 5px;
 }
 span.button:hover{
-    background-color: rgba(236, 184, 13, 1);  background-color: #f7eb47;
-    color: rgba(32,32,32,1);
+    background-color: rgba(236, 184, 13, 1);  background-color: #f7eb47;    color: rgba(32,32,32,1);
+    background-color: rgba(6, 50, 116,1);   color: honeydew;    border: 1px solid rgba(6, 50, 116,1);;
 }
 input.projectName {
     width: 100%; height: 50px;
@@ -49,5 +63,5 @@ input.projectName {
     color: black;
 }
 input.projectName:hover{
-    color: honeydew;
+    /* color: honeydew; */
 }
