--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -8,16 +8,30 @@ div.employees{
     align-items: center;
     /* background-color: rgb(0, 245, 245); */
 }
+div.employeesLabel{
+    width: 50%;    height: 75px;
+    display: flex; flex-direction: column;
+    text-align: center; vertical-align: middle; align-self: center; align-content: center;
+    background-color: rgba(6, 50, 116,1);
+}
+span.employeesLabel{
+    color: honeydew;
+    margin: auto;
+    border: 0.5px solid RGBA(6, 50, 116,1);
+    text-align: center; vertical-align: middle; align-self: center; align-content: center;
+    font-size: x-large;
+}
 div.employee{
     width: 50%;    height: 50px;
-    background-color: RGBA(200,200,200,1);
-    background-color: #f7eb47;
+    /* background-color: RGBA(200,200,200,1); */
+    /* background-color: #f7eb47; */
     display: flex;  flex-direction: row;
+    border-bottom: 1px solid RGBA(200,200,200,1);
 }
 div.employee:hover{
     width: 50%;    height: 50px;
-    background-color: RGBA(40,140,200,1);
-    background-color: RGBA(32,32,32,1);
+    /* background-color: RGBA(40,140,200,1); */
+    /* background-color: RGBA(32,32,32,1); */
 }
 span.newEmployeeIcon{
     width: 30px;    height: 30px;
@@ -42,6 +56,7 @@ span.button{
 span.button:hover{
     background-color: rgba(236, 184, 13, 1);  background-color: #f7eb47;
     color: rgba(32,32,32,1);
+    background-color: rgba(6, 50, 116,1);   color: honeydew;    border: 1px solid rgba(6, 50, 116,1);;
 }
 input.employeeAttribute {
     min-width: 50px; height: 50px;
@@ -49,12 +64,15 @@ input.employeeAttribute {
     background: transparent;    box-shadow: none;    border: none;  
     padding-left: 10px; outline: none;
     color: black;
+    font-size: 15px;
 }
 input.employeeAttribute.employeeEmail {
     width: 300px;
+    border-left: 1px solid RGBA(200,200,200,1);
+    border-right: 1px solid RGBA(200,200,200,1);
 }
 div.employee:hover > input.employeeAttribute{
-    color: honeydew;
+    /* color: honeydew; */
 }
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { 
