--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -17,7 +17,7 @@ div.projectsLabel{
 span.projectsLabel{
     color: honeydew;
     margin: auto;
-    border: 0.5px solid RGBA(6, 50, 116,1);
+    /* border: 0.5px solid RGBA(6, 50, 116,1); */
     text-align: center; vertical-align: middle; align-self: center; align-content: center;
     font-size: x-large;
 }
