--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,7 @@ div.home{
     width: 100%;    height: 100%;
 }
 app-menu{
-    width: 75px;   height: 100%;
+    min-width: 50px;   height: 100%;
     position: relative;
     display: flex;  flex-direction: column;
     background-color: #455672;
@@ -12,5 +12,7 @@ app-menu{
 app-workspace{
     position: relative;
     width: 100%;    height: 100%;
+    overflow: hidden;
+    /* max-width: 1vw; */
     /* background-color: blue; */
 }
