--- a/src/app/home/menu/menu.component.css
+++ b/src/app/home/menu/menu.component.css
@@ -7,6 +7,7 @@ div.menu{
     background-color: #0052CC;
     background-color: rgba(7,71,166,1);
     background-color: rgba(6, 50, 116,1);
+    background-color: #e04811;
 }
 
 div.menuItem{
@@ -22,29 +23,30 @@ span.menuItemIcon{
 div.menuItem:hover span.menuItemIcon, div.menuItem.active span.menuItemIcon{
     background-color: #0052CC;
     background-color: rgba(7,71,166,1);
+    background-color: #b43e17;
     opacity: 1;
 }
 span.menuItemIcon.homeIcon{
     background-image: url('./../../../assets/icons8-home-page-100.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    background-position: center;    background-repeat: no-repeat;   background-size: 20px;
 }
 span.menuItemIcon.timesheetIcon{
     background-image: url('./../../../assets/calendar.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    background-position: center;    background-repeat: no-repeat;   background-size: 20px;
 }
 span.menuItemIcon.reportsIcon{
     background-image: url('./../../../assets/icons8-combo-chart-filled-100.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    background-position: center;    background-repeat: no-repeat;   background-size: 20px;
 }
 span.menuItemIcon.projectsIcon{
     background-image: url('./../../../assets/list.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    background-position: center;    background-repeat: no-repeat;   background-size: 20px;
 }
 span.menuItemIcon.usersIcon{
     background-image: url('./../../../assets/users.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    background-position: center;    background-repeat: no-repeat;   background-size: 20px;
 }
 span.menuItemIcon.logoutIcon{
 background-image: url('./../../../assets/logout.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    background-position: center;    background-repeat: no-repeat;   background-size: 20px;
 }
