--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,43 +1,87 @@
 *{
-    transition: all 0.2s;
+    transition: all 0.25s ease;
+    box-sizing: border-box;
 }
-div.projects{
-    width: 100%;   height: 100%;
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    /* background: #ff2300; */
+    background: #e04811;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+div.projectsWorkspace{
+    max-width: 100%;   height: 100%;
+    /* max-width: 100%;    max-height: 100%; */
     position: relative;
     display: flex;  flex-direction: column;     justify-content: flex-start; align-content: center;
     align-items: center;
-    /* background-color: rgb(0, 245, 245); */
 }
-div.projectsLabel{
-    width: 50%;    height: 75px;
-    display: flex; flex-direction: column;
+div.projectsHeader{
+    width: 100%;    height: 40px;
+    display: flex; flex-direction: row;
     text-align: center; vertical-align: middle; align-self: center; align-content: center;
     background-color: rgba(6, 50, 116,1);
+    background-color: #242726;  font-weight: 100;
 }
 span.projectsLabel{
     color: honeydew;
+    opacity: 0.8;
     margin: auto;
+    display: flex;  flex-direction: row;
     /* border: 0.5px solid RGBA(6, 50, 116,1); */
     text-align: center; vertical-align: middle; align-self: center; align-content: center;
     font-size: x-large;
 }
-div.project{
-    width: 50%;    height: 50px;
-    /* background-color: RGBA(200,200,200,1); */
-    /* background-color: #f7eb47; */
-    border-bottom: 1px solid RGBA(200,200,200,1);
+div.projectsBody{
+    width: 100%;    height: calc(100% - 50px);
+    background-color: rgb(245, 245, 245);
+    background-color: #2c2f2e;
+    display: flex;  flex-direction: row;
 }
-div.project:hover{
-    width: 50%;    height: 50px;
-    /* background-color: RGBA(40,140,200,1); */
-    /* background-color: RGBA(32,32,32,1); */
+div.projectsList{
+    flex-grow: 1;
+    width: 100%;   max-height: 100%;
+    display: flex;  flex-direction: row;    flex-wrap: wrap;
+    justify-content: space-around;
+    overflow-x: hidden;
+    padding: 20px;
 }
+div.newProjectPanel{
+    position: absolute;
+    left: 100%;
+    width: 30%; height: 100%;
+    background-color: rgb(245, 245, 245);
+    /* background-color: #2c2f2e; */
+}
+div.newProjectPanel.active{
+    left: 70%;
+}
+
+
 span.newProjectIcon{
     width: 30px;    height: 30px;
-    background-image: url('./../../assets/icons8-plus-100-1.png');
-    background-position: center;    background-repeat: no-repeat;   background-size: 30px;
-    cursor: pointer;    margin-top: 25px; margin-bottom: 25px;  opacity: 0.7;  
+    /* background-image: url('./../../assets/icons8-plus-100-1.png'); */
+    /* background-image: url('./../../assets/add.svg'); */
+    mask: url('./../../assets/add.svg');    background: honeydew;
+    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    cursor: pointer;    margin-top: 10px;
+    /* margin-top: 25px; margin-bottom: 25px;  opacity: 0.7;   */
       /* margin-bottom: 50px; */
+}
+span.newProjectIcon:hover{
+    background:#e04811;
+    background:#f7eb47
+    /* background: yellow; */
 }
 span.newProjectIcon:hover, span.incIcon:hover{
     opacity: 1;
@@ -56,12 +100,229 @@ span.button:hover{
     background-color: rgba(236, 184, 13, 1);  background-color: #f7eb47;    color: rgba(32,32,32,1);
     background-color: rgba(6, 50, 116,1);   color: honeydew;    border: 1px solid rgba(6, 50, 116,1);;
 }
-input.projectName {
-    width: 100%; height: 50px;
-    background: transparent;    box-shadow: none;    border: none;  
-    padding-left: 10px; outline: none;
-    color: black;
+
+form#newProjectForm {
+    width: 100%;    height: 100%;
+    position: relative;
 }
-input.projectName:hover{
-    /* color: honeydew; */
+div.projectField{
+    position: relative;
+    width: 80%; height: 50px;
+    margin-left: 15px;
+    margin-top: 25px;
+}
+input.fieldValue{
+    width: 100%; height: 30px;   font-size-adjust: inherit;
+    background: transparent;    box-shadow: none;    border: none;  
+    /* margin-left: 10px;  margin-top: 30px; */
+    /* padding-left: 10px; */
+    outline: none;
+    /* color: black; */
+    font-size: 15px;
+    border-bottom: 1px solid rgba(32,32,32,0.3);
+}
+label {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;    height: 30px;   line-height: 30px;
+    font-size: 15px;
+    /* padding-left: 10px; */
+    color: #d3d3d3;
+    cursor: text;
+}
+input.fieldValue:invalid {
+    outline: 0;
+    color: #ff2300;
+    /* border-color: #e04811; */
+}
+input.fieldValue:focus,
+input.fieldValue:valid {
+    /* border-color: #00dd22; */
+  }
+input.fieldValue:focus~label,
+input.fieldValue:valid~label {
+    font-size: 12px;
+    left: 100%;
+    color: rgba(32,32,32,0.6);
+    color: #ff2300;
+    color: #e04811;
+    font-weight: 400;
+}
+button{
+    position: absolute;
+    top: calc(100% - 100px);
+    align-self: center;
+    width: 50%;  height: 50px;
+    /* margin-top: 20px; margin-bottom: 20px;  border: 1px solid rgba(32,32,32,0.3); */
+    background-color: RGBA(0,0,0,0);  color: RGBA(0,0,0,1);
+    font-weight: 300; font-size: 15px;
+    transition: 0.3s;
+    outline: 0;
+    border: none;
+    /* margin-left: 10px; */
+    left: 50%;
+    background-color: #2c2f2e;
+    color: honeydew;
+}
+button[type='button']{
+    left: 0%;
+    background-color: #e04811;
+}
+button[type='button']:hover{
+    left: 0%;
+    /* background-color: #e04811; */
+    /* background-color: #ff2300; */
+    background-color: #e04811;
+    opacity: 0.9;
+}
+
+
+button:hover{
+    /* background-color: RGBA(246,139,31,1); color: ghostwhite; */
+    background-color: RGBA(0,0,0,0.8); color: ghostwhite;
+    background-color: #242726;
+    border: 0px;
+    cursor: pointer;
+}
+div.cancel{
+    position: absolute;
+    top: 0; right: 0;
+    width: 30px;    height: 30px;
+    /* background-image: url('./../../assets/close-black.png'); */
+    /* background-position: center;    background-repeat: no-repeat;   background-size: 30px; */
+    cursor: pointer;
+}
+div.cancel img{
+    width: 30px;    height: 30px;
+}
+span.projectDetailsLabel{
+    color: #ff2300;
+    color: #e04811;
+    opacity: 0.8;
+    padding-left: 10px;
+    /* margin: auto;   padding: 10px; */
+    /* display: flex;  flex-direction: row; */
+    /* border: 0.5px solid RGBA(6, 50, 116,1); */
+    text-align: center; vertical-align: middle; align-self: center; align-content: center;
+    font-size: large;
+    width: calc(100% - 50px);   height: 30px;   line-height: 30px;
+}
+div.cancel:hover{
+    transform: scale(1.5);
+    /* background-color: #242726; */
+}
+
+
+div.project{
+    /* width: 200px;    height: 150px; */
+    /* background-color: RGBA(200,200,200,1); */
+    /* background-color: #f7eb47; */
+    width: calc(25% - 1px); height: calc(25% - 1px);
+    margin-top: 5px;
+    min-height: 0px;
+    transition: all 1s ease;
+    overflow: hidden;
+}
+div.project:hover{
+    /* font-size: 100px;   line-height: 100px; */
+    /* width: 50%;    height: 50px; */
+    /* background-color: RGBA(40,140,200,1); */
+    /* background-color: RGBA(32,32,32,1); */
+}
+div.project.active{
+    /* position: absolute;
+    width: 100%;    height: 100%; */
+    animation-name: fullHeight, fullWidth;
+    animation-duration: 1s, 1s;
+    animation-delay: 0s, 1s; /* add this */
+    animation-timing-function: ease, ease;
+    animation-iteration-count: 1, 1;
+    animation-fill-mode: forwards, forwards;
+}
+div.projectsList.active div.project.inactive, div.projectsList.active div.project.inactive div.projectCard{
+    /* flex-grow: 0; */
+    /* width: 0%;    height: 0%; */
+    animation-name: zeroHeight, zeroWidth;
+    animation-duration: 1s, 1s;
+    animation-delay: 0s, 1s; /* add this */
+    animation-timing-function: ease, ease;
+    animation-iteration-count: 1, 1;
+    animation-fill-mode: forwards, forwards;
+}
+div.projectCard{
+    /* width: calc(100% - 20px);   height: calc(100% - 20px); */
+    width: 100%;   height: 100%;
+    padding: 10px;
+    /* border-right: 1px solid white; */
+    border-bottom: 1px solid RGBA(0,0,0,1);
+    background-color: RGBA(200,200,200,1);
+    /* border-radius: 5px; */
+    /* opacity: 0.7; */
+    cursor: pointer;
+    display: flex;  flex-direction: column;
+    position: relative;
+    transition: all 0.25s;
+}
+div.projectCard:hover{
+    /* transform: scale(1.2); */
+    opacity: 1;
+    /* border: 1px solid RGBA(0,0,0,1); */
+}
+div.projectCard span.projectName{
+    font-size: 1.25em;
+}
+div.projectCard div.projectOptions{
+    width: calc(100% - 20px);    height: 50px;
+    position: absolute; top: 100%;
+    background-color: #242726;
+    display: flex;  flex-direction: row;
+    justify-content: space-evenly;
+    /* background-color: #907163; */
+}
+
+div.projectCard:hover div.projectOptions{
+    top: calc(100% - 50px);
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+}
+
+span.projectOption{
+    width: 25px;    height: 100%;   line-height: 50px;  vertical-align: middle;
+    mask: url('./../../assets/delete.svg');    background: honeydew;    mask-size: 25px;    mask-repeat: no-repeat; mask-position: center;
+    background-position: center;    background-repeat: no-repeat;   background-size: 25px;
+    cursor: pointer;    margin-top: 4px;
+}
+span.projectOption.configure{
+    mask: url('./../../assets/configure.svg');    background: honeydew;    mask-size: 25px;    mask-repeat: no-repeat; mask-position: center;
+}
+span.projectOption.time{
+    mask: url('./../../assets/time.svg');    background: honeydew;    mask-size: 25px;    mask-repeat: no-repeat; mask-position: center;
+}
+span.projectOption.delete:hover{
+    background:#e04811;
+    background:#984b43;
+}
+span.projectOption.configure:hover{
+    background:#caebf2;
+    background:#dcb239;
+}
+span.projectOption.time:hover{
+    background:#caebf2;
+    background:#008f95;
+}
+@keyframes zeroHeight {
+    from {height: 100%;}
+    to {height: 0%;padding-top:0px;padding-bottom:0px;border-top:0px;border-bottom:0px;}
+}
+@keyframes fullHeight {
+    from {}
+    to {height:100%;}
+}
+@keyframes zeroWidth {
+    from {width: 100%;}
+    to {width: 0%;padding-left:0px;padding-right:0px;border-left:0px;border-right:0px;}
+}
+@keyframes fullWidth {
+    from {}
+    to {width:100%;}
 }
