--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -7,6 +7,22 @@ div.employees{
     display: flex;  flex-direction: column;     justify-content: flex-start;
     align-items: center;
     /* background-color: rgb(0, 245, 245); */
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 div.employeesLabel{
     width: 50%;    height: 75px;
